--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,5 @@
 .Header {
-    display: flex;
-    flex-direction: column;
     margin-left: 15%;
+    height: 10rem;
     background-color: red;
 }
