--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,26 @@
 .Header {
-    margin-left: 15%;
+    margin-left: 18rem;
     height: 10rem;
-    background-color: red;
+    background-color: #f5f6fa;
+}
+
+.Header > .BlogName {
+    padding: 2rem;
+    font-size: 2rem;
+    color: #718093;
+    font-family: Arial, serif;
+}
+
+.Header .AuthButton {
+    all: unset;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    margin: 1rem;
+    background-color: #dcdde1;
+    color: #718093;
+    padding: 0.3rem 0.5rem;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
 }
