--- a/src/page/Login.css
+++ b/src/page/Login.css
@@ -1,3 +1,45 @@
 .LoginTemplate {
     height: 100%;
+    margin: 15%;
+}
+
+.LoginTemplate > div, button {
+    text-align: center;
+}
+
+.LoginTemplate .LoginInput {
+    width: 30%;
+    margin: 20px auto;
+}
+
+.LoginTemplate .Label {
+    text-align: left;
+    margin-bottom: 0px;
+    font-size: 1.4rem;
+}
+
+.LoginTemplate input {
+    all: unset;
+    border-bottom: 1px solid grey;
+    width: 100%;
+    font-size: 2rem;
+    padding: 0.6rem;
+    text-align: left;
+}
+
+.LoginTemplate .LoginBtnWrap {
+    margin-top: 30px;
+}
+
+.LoginTemplate .LoginBtnWrap > button {
+    all: unset;
+    padding: 15px 20px;
+    border: 1px solid;
+    border-radius: 3px;
+    background-color: #718093;
+    color: white;
+}
+
+.LoginTemplate .LoginBtnWrap > button:hover {
+
 }
