post list 연결 테스트

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,7 +13,7 @@
 
 .Header .AuthButton {
     all: unset;
-    position: fixed;
+    position: absolute;
     top: 1rem;
     right: 1rem;
     margin: 1rem;
