--- a/src/page/PostList.css
+++ b/src/page/PostList.css
@@ -8,6 +8,9 @@
     font-weight: bold;
     margin-bottom: 2rem;
     padding: 0.6rem;
-    border: 1px solid #8395a7;
+    border: 1px solid #bdc3c7;
+    border-left: 0;
+    border-right: 0;
+    color: #7f8c8d;
     cursor: pointer;
 }
