PostWriteForm 추가 및 텍스트 에디터 삽입

--- a/src/page/PostDetail.css
+++ b/src/page/PostDetail.css
@@ -56,3 +56,14 @@
 .CommentWrap {
     list-style: none;
 }
+
+.PostButton {
+    float: right;
+}
+
+.RemoveButton, .ModifyButton {
+    all: unset;
+    padding: 0 0.5rem;
+    cursor: pointer;
+    color: #a4b0be;
+}
