--- a/src/page/PostList.css
+++ b/src/page/PostList.css
@@ -14,3 +14,16 @@
     color: #7f8c8d;
     cursor: pointer;
 }
+
+.PostList .ButtonWrap {
+    float: right;
+}
+
+.ButtonWrap .PostWriteButton {
+    all: unset;
+    cursor: pointer;
+    margin: 0 2rem;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: #a4b0be;
+}
