--- a/src/page/PostWriteForm.css
+++ b/src/page/PostWriteForm.css
@@ -8,8 +8,8 @@
     margin: 1rem 0;
     padding: 0.5rem;
     width: 90%;
-    height: 3rem;
-    font-size: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.5rem;
 }
 
 .WriteForm .ButtonWrap {
@@ -22,11 +22,16 @@
     margin: 0.5rem;
     padding: 0.4rem 0.6rem;
     border: 1px solid #718093;
-    border-radius: 3px ;
+    border-radius: 3px;
     cursor: pointer;
 }
 
 .WriteForm .ButtonWrap > button:hover {
     background-color: #718093;
     transition: 0.5s background-color;
+}
+
+.WriteForm .CategorySelect {
+    padding: 0.2rem;
+    font-size: 1.2rem;
 }
