post 수정 기능 추가

--- a/src/page/PostWriteForm.css
+++ b/src/page/PostWriteForm.css
@@ -3,6 +3,12 @@
     margin: 3rem auto;
 }
 
+.WriteForm h2 {
+    font-weight: bold;
+    margin-bottom: 1rem;
+    color: #7f8c8d;
+}
+
 .WriteForm .PostTitle {
     display: inline-block;
     margin: 1rem 0;
