--- a/src/components/Navigator.css
+++ b/src/components/Navigator.css
@@ -13,7 +13,6 @@
     text-decoration: none;
     color: white;
     text-align: center;
-
 }
 
 .link {
@@ -32,4 +31,12 @@
     margin: 10px 0 10px 10px;
     list-style: none;
     font-size: 1.3rem;
+}
+
+.MenuSettingButtonWrap {
+    position: relative;
+    margin: 1rem;
+}
+
+.MenuSettingButton {
 }
