댓글 유효성 검사 추가

--- a/src/components/include/Navigator.css
+++ b/src/components/include/Navigator.css
@@ -22,8 +22,11 @@
 }
 
 .MenuSettingButtonWrap {
-    position: relative;
+    position: absolute;
     margin: 1rem;
+    bottom: 0;
+    right: 0;
+    cursor: pointer;
 }
 
 .MenuSettingButton {
