--- a/src/components/category/CategoryItem.css
+++ b/src/components/category/CategoryItem.css
@@ -5,11 +5,15 @@
     background-color: #ecf0f1;
 }
 
-.CategoryItem .CategoryName {
+.CategoryItem .CategoryValue {
     font-size: 1.2rem;
     padding: 0.5rem;
     cursor: pointer;
     user-select: none;
     font-weight: bold;
+}
+
+.CategoryItem.isActive {
+    background-color: #ecf0f1;
 }
 
