--- a/src/components/include/Header.css
+++ b/src/components/include/Header.css
@@ -18,7 +18,7 @@
     right: 1rem;
     margin: 1rem;
     background-color: #dcdde1;
-    color: #718093;
+    color: #7f8c8d;
     padding: 0.3rem 0.5rem;
     border-radius: 4px;
     cursor: pointer;
