--- a/src/components/util/FlashPopup.css
+++ b/src/components/util/FlashPopup.css
@@ -1,4 +1,4 @@
-.WarningWrapper {
+.FlashPopupWrapper {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -6,7 +6,7 @@
     z-index: 10;
 }
 
-.Warning {
+.FlashPopup {
     white-space: nowrap;
     font-size: 1.5rem;
     padding: 2rem;
