--- a/src/components/category/CategoryForm.css
+++ b/src/components/category/CategoryForm.css
@@ -1,4 +1,4 @@
-.CategoryInfo {
+.CategoryForm {
     display: inline-block;
     float: right;
     margin: 2rem;
@@ -10,12 +10,12 @@
     box-shadow: 2px 2px 2px 2px grey;
 }
 
-.CategoryInfo .CategoryInfoLabel {
+.CategoryForm .CategoryFormLabel {
     margin-top: 1rem;
     font-size: 1.5rem;
 }
 
-.CategoryInfo input {
+.CategoryForm input {
     all: unset;
     padding: 0.5rem;
     width: 18rem;
@@ -24,13 +24,13 @@
     border-radius: 4px;
 }
 
-.CategoryInfo select {
+.CategoryForm select {
     width: 15rem;
     height: 3rem;
     font-size: 1.5rem;
 }
 
-.CategoryInfo .CategoryModifyButtonWrap{
+.CategoryForm .CategoryModifyButtonWrap{
     margin-top: 0.5rem;
     text-align: center;
 }
