메인 화면 및 포스트 메인 컨텐츠 css 수정

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,11 @@
     box-sizing: border-box;
     min-height: 100%;
 }
-.MainContent {
+.ContentWrap {
     margin-left: 18rem;
 }
 
+.MainContent {
+    min-height: 800px;
+}
 
