--- a/src/page/PostList.css
+++ b/src/page/PostList.css
@@ -31,3 +31,9 @@
 .PostList .WriteButton {
     all: unset;
 }
+
+.PostNotFound {
+    margin-top: 3rem;
+    text-align: center;
+    font-style: italic;
+}
